fix(CodeHighlighting): ensure a scrollbar is shown when not enough space is available

--- a/packages/dnb-eufemia/src/style/elements/code.scss
+++ b/packages/dnb-eufemia/src/style/elements/code.scss
@@ -8,6 +8,8 @@
   margin: -0.25em 0;
   padding: 0.25em 0.25em; /* 2px 4px */
 
+  overflow: auto;
+
   font-size: inherit;
   text-decoration: inherit;
   line-height: var(--line-height-xx-small--em); // 1.5rem - 0.25em - 0.25em
